experiments/liquid_vlm_integration/results/20260128_0508_evaluation_log.txt
  File "/home/ubuntu/liquid_mono_to_3d/experiments/liquid_vlm_integration/evaluate_vlm_accuracy.py", line 198
    print(f"\n{=*70}")
               ^
SyntaxError: f-string: valid expression required before '='
